2004-08-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_offline.erl: Added entire table locking on large message
	queue

	* src/ejabberd_sm.erl: Added offline_subscription_hook
	* src/mod_offline.erl: Use offline_subscription_hook

	* src/configure.erl: Updated (thanks to Sergei Golovan)
	* src/Makefile.win32: Likewise
	* src/tls/Makefile.win32: Likewise
	* src/win32/: Likewise

	* src/mod_announce.erl: Added announce to all users (thanks to
	Sergei Golovan)
	* doc/guide.tex: Updated (thanks to Sergei Golovan)

2004-08-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/msgs/nl.msg: Updated (thanks to Sander Devrieze)

	* src/web/ejabberd_http_poll.erl: Fixed sending of Set-Cookie
	header

2004-08-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Bugfix in resend_offline_messages/1

	* src/mod_announce.erl: New module to manage announce messages
	(thanks to Sergei Golovan)

	* src/ejabberd_local.erl: Moved processing of announce messages to
	mod_announce (thanks to Sergei Golovan)

	* src/ejabberd_c2s.erl: Added several hooks

	* src/ejabberd_hooks.erl: Fixed run_fold (thanks to Sergei
	Golovan)

	* src/ejabberd.cfg.example: Updated (thanks to Sergei Golovan)

	* doc/guide.tex: Updated (thanks to Sergei Golovan)

2004-08-08  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_c2s.erl: Use resend_offline_messages_hook to fetch
	offline messages
	* src/mod_offline.erl: Likewise

	* src/mod_offline.erl: Added table locking in
	remove_old_messages/1

	* src/ejabberd_sm.erl: Use offline_message_hook to store offline
	messages
	* src/mod_offline.erl: Likewise

	* src/ejabberd_hooks.erl: Hooks support
	* src/ejabberd_sup.erl: Added ejabberd_hooks

	* doc/guide.tex: Updated

	* src/ejabberd.cfg.example: Updated

	* src/ejabberd_c2s.erl: Changed TLS options (thanks to Sergei
	Golovan)

2004-08-05  Alexey Shchepin  <alexey@sevcom.net>

	* src/aclocal.m4: Updated to check for openssl library (thanks to
	AV)
	* src/configure.ac: Likewise