@@ -1,3 +1,9 @@
+2004-08-24  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/mod_service_log.erl: Support for logging of user packets via
+	external service (e.g. bandersnatch)
+	* doc/guide.tex: Updated
+
 2004-08-23  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_offline.erl: Added entire table locking on large message
